@@ -2,6 +2,8 @@ ubiquity (2.3.17) UNRELEASED; urgency=low
 
   * Fetch the translations for the release_notes_only and
     update_installer_only strings (LP: #629627).
+  * Don't use the same name for the error method and GTK label
+    (LP: #631046).
 
  -- Evan Dandrea <evand@ubuntu.com>  Mon, 06 Sep 2010 11:43:54 +0100
 
